<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/tablebackground"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imgChips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/chips" />

                <TextView
                    android:id="@+id/player_bank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bank"
                    android:textColor="#ffff00"
                    android:textSize="25sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="right" >

                    <TextView
                        android:id="@+id/highest_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:gravity="right"
                        android:text="@string/highest"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#ffff00" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/dealer_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dealersscore"
                    android:textColor="#ffff00" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/dealer_card1"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="2dp" />

                <ImageView
                    android:id="@+id/dealer_card2"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="2dp" />

                <ImageView
                    android:id="@+id/dealer_card3"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="2dp" />

                <ImageView
                    android:id="@+id/dealer_card4"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="2dp" />

                <ImageView
                    android:id="@+id/dealer_card5"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="2dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/player_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/playersscore"
                    android:textColor="#ffff00" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/player_card1"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="2dp" />

                <ImageView
                    android:id="@+id/player_card2"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="2dp" />

                <ImageView
                    android:id="@+id/player_card3"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="2dp" />

                <ImageView
                    android:id="@+id/player_card4"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="2dp" />

                <ImageView
                    android:id="@+id/player_card5"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="2dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TextView
                    android:id="@+id/player_bet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bet"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#ffff00" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <ImageButton
                    android:id="@+id/five_BetAmount"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/five_chip"
                    android:background="#00ffffff"
                    android:onClick="btn5bet" />

                <ImageButton
                    android:id="@+id/twentyfive_BetAmount"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/twentyfive_chip"
                    android:background="#00ffffff"
                    android:onClick="btn25bet" />

                <ImageButton
                    android:id="@+id/hundred_BetAmount"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/hundred_chip"
                    android:background="#00ffffff"
                    android:onClick="btn100bet" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <Button
                    android:id="@+id/game_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:text="@string/game"
                    android:onClick="setBtnGame" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <Button
                    android:id="@+id/double_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:text="@string/card_double"
                    android:onClick="btnDouble" />

                <Button
                    android:id="@+id/hit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:text="@string/hit"
                    android:onClick="btnHit" />

                <Button
                    android:id="@+id/stand_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:text="@string/stand"
                    android:onClick="btnStand" />

                <Button
                    android:id="@+id/surrender_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:text="@string/surrender"
                    android:onClick="btnSurrender" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/quit_button"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:text="@string/quit"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/rules_button"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:src="@drawable/rules_button"
                    android:scaleType="fitXY"
                    android:background="#00ffffff"
                    android:onClick="rulesButton" />

            </LinearLayout>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id">
            </com.google.android.gms.ads.AdView>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
